--- a/src/views/settings.ejs
+++ b/src/views/settings.ejs
@@ -191,6 +191,7 @@
                 <a href="/dashboard" class="nav-link">Dashboard</a>
                 <a href="/orders" class="nav-link">Orders</a>
                 <a href="/groups" class="nav-link">Groups</a>
+                <a href="/inventory" class="nav-link">Inventory</a>
                 <button class="btn btn-icon" id="theme-toggle" aria-label="Toggle Theme">
                     <i class="fas fa-sun"></i>
                     <i class="fas fa-moon"></i>
